# ur16e-dev

./: LICENSE  README.md
eSeries_UR16e_14012020_URDF/: CMakeLists.txt  package.xml
eSeries_UR16e_14012020_URDF/launch/: display.launch  gazebo.launch
eSeries_UR16e_14012020_URDF/meshes/: Elbow.STL  Shoulder1.STL  Shoulder2.STL  Wrist1.STL  Wrist2.STL
eSeries_UR16e_14012020_URDF/urdf/: eSeries_UR16e_14012020_URDF.csv  eSeries_UR16e_14012020_URDF.urdf
eSeries_UR16e_URDF/: CMakeLists.txt  package.xml
eSeries_UR16e_URDF/launch/: display.launch  gazebo.launch
eSeries_UR16e_URDF/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  base_link.STL  base_no_cord.STL
eSeries_UR16e_URDF/solidworks/: Link_1.SLDPRT  Link_2.SLDPRT  Link_3.SLDPRT  Link_4.SLDPRT  Link_5.SLDPRT  Link_6.SLDPRT  base.SLDPRT
eSeries_UR16e_URDF/urdf/: eSeries_UR16e_15012020_URDF_ONLY.csv  eSeries_UR16e_15012020_URDF_ONLY.urdf
